Bug 1042959 - Ensure that we always use the actual old screen size in HandlePossibleViewportChange. r=botond